@@ -14,6 +14,7 @@ Core
 
 * Enable catalog usertags within dispatch routines.
 
+* SpecialSub order_missing added (#221).
 
 ------------------------------------------------------------------------------
 
